// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading component Should be a subtitle with size rendered as P 1`] = `
<p
  className="is-3 subtitle"
>
  Subtitle
</p>
`;

exports[`Heading component Should be spaced 1`] = `
<p
  className="is-spaced title"
>
  Subtitle
</p>
`;

exports[`Heading component Should concat classname in props with Bulma classname 1`] = `
<h1
  className="other-class this-is-a-test title"
>
  <p>
    Default
  </p>
</h1>
`;

exports[`Heading component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "children": null,
    "heading": false,
    "renderAs": "h1",
    "spaced": false,
    "subtitle": false,
  },
  "render": [Function],
}
`;

exports[`Heading component Should have title classname 1`] = `
<h1
  className="title"
>
  Test 
  <a>
    Give me
  </a>
</h1>
`;

exports[`Heading component Should not be spaced because is subtitle 1`] = `
<p
  className="subtitle"
>
  Subtitle
</p>
`;

exports[`Heading component Should use inline styles 1`] = `
<h1
  className="title"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</h1>
`;
